--- a/index.html
+++ b/index.html
@@ -19,24 +19,96 @@
 </head>
 <!-- attach the controller, in [controller name] as [alias] format -->
 <body ng-controller="StoreController as store">
-  <p>{{"hello " + "you"}}</p>
-  <!-- <div ng-show="!store.product.soldOut"> -->
-  <!-- expression: hide div when product is sold out -->
-  <!-- <div ng-hide="store.product.soldOut">
-    <h1>{{store.product.name}}</h1>
-    <h2>${{store.product.price}}</h2>
-    <p>{{store.product.description}}</p> -->
-    <!-- this is a directive: display when expression - canPurchase: true -->
-    <!-- <button ng-show="store.product.canPurchase">Add to Cart</button>
-  </div>
- -->
- <!-- using an array of products... repeat for each product -->
- <div ng-repeat="product in store.products">
-    <h1>{{product.name}}</h1>
+  <h1>Hello, {{name}}!</h1>
+  <ul class="list-group">
+    <li class="list-group-item" ng-repeat="product in store.products">
+      <h3>
+        {{product.name}}
+        <!-- Pipe the price into localized currency format -->
+        <!-- syntax: {{data | filter:options}} -->
+        <!-- examples:
+        date: {{'1388123412323' | date: 'MM/dd/yyyy @ h:mma'}} returns 12/27/2013 @ 1250am
+        uppercase: {{'octagon gem' | uppercase}} returns OCTAGON GEM
+        limitTo: {{'My Description' | limitTo:8}} returns: My Descr
+        limit items in array:
+        <li ng-repeat="product in store.products | limitTo:3"></li>
+        orderBy descending price:
+        <li ng-repeat="product in store.products | orderBy:'-price'"></li>
+        orderBy ascending price:
+        <li ng-repeat="product in store.products | orderBy:'price'"></li>
+        to display first image in array {{product.images[0].full}}
+        don't do this. The browser will try to load the image before the Expression evaluates
+        <img src="{{product.images[0].full}}">
+        Use ng-src directive to fix this. -->
+        <em class="pull-right">{{product.price | currency}}</em>
+        <img ng-src="{{product.images[0].full}}">
+      </h3>
+    </li>
+  </ul>
+  <div ng-repeat="product in store.products">
+    <h1>Hello, {{name}}!</h1>
     <h2>${{product.price}}</h2>
     <p>{{product.description}}</p>
     <button ng-show="product.canPurchase">Add to Cart</button>
   </div>
+
+
+  <!-- ng-init allows us to evaluate an expression in the current scope -->
+  <!-- we'll refactor this into a panel controller next -->
+ <!--  <section ng-init="tab = 1">
+    <ul class="nav nav-pills"> -->
+    <!-- use ng-click Directive that takes an Expression to evaluate. Assign a value to the tab. This is 2-way data binding, meaning the expression is reevaluated when the property changes -->
+      <!-- toggle on the active class to the li if current tab is selected -->
+      <!-- <li ng-class="{active:tab === 1}"><a href ng-click="tab = 1">Description</a></li>
+      <li ng-class="{active:tab === 2}"><a href ng-click="tab = 2">Specifications</a></li>
+      <li ng-class="{active:tab === 3}"><a href ng-click="tab = 3">Reviews</a></li>
+    </ul> -->
+    <!-- this is the tab Expression -->
+    <!-- {{tab}} -->
+    <!-- show if the tab === the value -->
+<!--     <div class="panel" ng-show="tab === 1">
+      <h4>Description</h4>
+      <p>{{product.description}}</p>
+    </div>
+    <div class="panel" ng-show="tab === 2">
+      <h4>Specifications</h4>
+      <blockquote>None yet</blockquote>
+    </div>
+    <div class="panel" ng-show="tab === 3">
+      <h4>Reviews</h4>
+      <blockquote>None yet</blockquote>
+    </div>
+  </section> -->
+
+
+  <!-- ng-init is great for prototyping purposes. Pulling that out now, refactoring into a panel controller -->
+<!--   PanelCongroller as panel (the alias of PanelController) -->
+  <section ng-controller="PanelController as panel">
+    <ul class="nav nav-pills">
+    <!-- use ng-click Directive that takes an Expression to evaluate. Assign a value to the tab. This is 2-way data binding, meaning the expression is reevaluated when the property changes -->
+      <!-- toggle on the active class to the li if current tab is selected -->
+      <li ng-class="{active:panel.isSelected(1)}"><a href ng-click="panel.selectTab(1)">Description</a></li>
+      <li ng-class="{active:panel.isSelected(2)}"><a href ng-click="panel.selectTab(2)">Specifications</a></li>
+      <li ng-class="{active:panel.isSelected(3)}"><a href ng-click="panel.selectTab(3)">Reviews</a></li>
+    </ul>
+    <!-- this is the tab Expression -->
+    {{tab}}
+    <!-- show if the tab === the value -->
+    <div class="panel" ng-show="panel.isSelected(1)">
+      <h4>Description</h4>
+      <p>{{product.description}}</p>
+    </div>
+    <div class="panel" ng-show="panel.isSelected(2)">
+      <h4>Specifications</h4>
+      <blockquote>None yet</blockquote>
+    </div>
+    <div class="panel" ng-show="panel.isSelected(3)">
+      <h4>Reviews</h4>
+      <blockquote>None yet</blockquote>
+    </div>
+  </section>
+
+
 
   <!-- Latest compiled and minified JavaScript -->
 
@@ -51,28 +123,6 @@
 </html>
 
 
-<!-- <html ng-app="gemStore">
-  <head>
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
-    <script type="text/javascript" src="angular.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-  </head>
-  <body ng-controller="StoreController as store">
-    <div class="product row">
-      <h3>
-        {{store.product.name}}
-        <em class="pull-right">{{store.product.price}}</em>
-      </h3>
-    </div>
-  </body>
-</html> -->
-
-
-<!-- directives - html annotations that trigger JS behaviors
-modules - where our application components live
-controllers - where we add application behavior
-expressions - how values get displayed within the page -->
-
 
 <!-- <!DOCTYPE html>
 <html ng-app="gemStore">
@@ -81,16 +131,25 @@ expressions - how values get displayed within the page -->
     <script type="text/javascript" src="angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </head>
-  <body class="container" ng-controller="StoreController as store">
-    <div class="product row" ng-hide="store.product.soldOut">
-      <h3>
-        {{store.product.name}}
-        <em class="pull-right">${{store.product.price}}</em>
-      </h3>
-      <button ng-show="store.product.canPurchase">Add to Cart</button>
+  <body ng-controller="StoreController as store"> -->
+    <!--  Products Container  -->
+  <!--   <div class="list-group"> -->
+      <!--  Product Container  -->
+<!--       <div class="list-group-item" ng-repeat="product in store.products">
+        <h3>
+          {{product.name}}
+          <em class="pull-right">{{product.price | currency}}</em>
+        </h3> -->
+        <!-- Image Gallery  -->
+<!--         <div class="gallery">
+          <img ng-src="{{product.images[0]}}" />
+        </div>
+      </div>
     </div>
   </body>
 </html> -->
+
+
 
 
 
@@ -101,12 +160,135 @@ expressions - how values get displayed within the page -->
     <script type="text/javascript" src="angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </head>
-  <body class="container" ng-controller="StoreController as store">
-    <div class="product row" ng-repeat="product in store.products">
+  <body ng-controller="StoreController as store"> -->
+    <!--  Products Container  -->
+<!--     <div class="list-group"> -->
+      <!--  Product Container  -->
+<!--       <div class="list-group-item" ng-repeat="product in store.products">
+        <h3>
+          {{product.name}}
+          <em class="pull-right">{{product.price | currency}}</em>
+        </h3> -->
+
+        <!-- Image Gallery  -->
+        <!-- <div class="gallery" ng-show="product.images.length">
+          <img class="img img-circle img-thumbnail center-block" ng-src="{{product.images[0]}}" />
+          <ul class="clearfix">
+            <li class="small-image pull-left thumbnail" ng-repeat="image in product.images"> <img ng-src="{{image}}" /> </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
+</html> -->
+
+
+
+
+<!-- <!DOCTYPE html>
+<html ng-app="gemStore">
+  <head>
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+    <script type="text/javascript" src="angular.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+  </head>
+  <body class="list-group" ng-controller="StoreController as store">
+    <header>
+      <h1 class="text-center">Flatlander Crafted Gems</h1>
+      <h2 class="text-center">– an Angular store –</h2>
+    </header>
+    <div class="list-group-item" ng-repeat="product in store.products">
       <h3>
         {{product.name}}
-        <em class="pull-right">${{product.price}}</em>
+        <em class="pull-right">{{product.price | currency}}</em>
       </h3>
+      <section ng-show="product.images.length">
+        <img ng-src="{{product.images[0]}}" />
+        <ul class="list-inline thumbs">
+          <li class="thumbnail" ng-repeat="image in product.images">
+            <img ng-src="{{image}}" />
+          </li>
+        </ul>
+      </section>
+
+      <section class="tab" ng-controller="TabController as tab">
+        <ul class="nav nav-pills">
+          <li ng-class="{active:tab.isSet(1)}">
+            <a href ng-click="tab.setTab(1)">Description</a></li>
+          <li ng-class="{active:tab.isSet(2)}">
+            <a href ng-click="tab.setTab(2)">Specs</a></li>
+          <li ng-class="{active:tab.isSet(3)}">
+            <a href ng-click="tab.setTab(3)">Reviews</a></li>
+        </ul>
+        <div ng-show="tab.isSet(1)">
+          <h4>Description</h4>
+          <blockquote>{{product.description}}</blockquote>
+        </div>
+        <div ng-show="tab.isSet(2)">
+          <h4>Specs</h4>
+          <blockquote>Shine: {{product.shine}}</blockquote>
+        </div>
+        <div ng-show="tab.isSet(3)">
+          <h4>Reviews</h4>
+          <blockquote></blockquote>
+        </div>
+      </section>
+    </div>
+  </body>
+</html> -->
+
+
+
+<!-- <!DOCTYPE html>
+<html ng-app="gemStore">
+  <head>
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+    <script type="text/javascript" src="angular.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+  </head>
+  <body class="list-group" ng-controller="StoreController as store">
+    <header>
+      <h1 class="text-center">Flatlander Crafted Gems</h1>
+      <h2 class="text-center">– an Angular store –</h2>
+    </header>
+    <div class="list-group-item" ng-repeat="product in store.products">
+      <h3>
+        {{product.name}}
+        <em class="pull-right">{{product.price | currency}}</em>
+      </h3>
+
+      Image Gallery
+        <div class='gallery' ng-show="product.images.length" ng-controller="GalleryController as gallery">
+        notice the swapping of [gallery.current] for [0] here
+        <img ng-src="{{product.images[gallery.current]}}" />
+        <ul class="list-inline thumbs">
+          <li class="thumbnail" ng-repeat="image in product.images">
+            <img ng-src="{{image}}" />
+          </li>
+        </ul>
+      </div>
+
+      <section class="tab" ng-controller="TabController as tab">
+        <ul class="nav nav-pills">
+          <li ng-class="{ active: tab.isSet(1) }">
+            <a href ng-click="tab.setTab(1)">Description</a></li>
+          <li ng-class="{ active: tab.isSet(2) }">
+            <a href ng-click="tab.setTab(2)">Specs</a></li>
+          <li ng-class="{ active: tab.isSet(3) }">
+            <a href ng-click="tab.setTab(3)">Reviews</a></li>
+        </ul>
+        <div ng-show="tab.isSet(1)">
+          <h4>Description</h4>
+          <blockquote>{{product.description}}</blockquote>
+        </div>
+        <div ng-show="tab.isSet(2)">
+          <h4>Specs</h4>
+          <blockquote>Shine: {{product.shine}}</blockquote>
+        </div>
+        <div ng-show="tab.isSet(3)">
+          <h4>Reviews</h4>
+        </div>
+      </section>
     </div>
   </body>
 </html> -->
