--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html ng-app="store">
-<!-- adding ng-app="store" created Uncaught Error: [$injector:modulerr] error... removing "=store" fixed it is this an angular 1.5.0 issue? same happening in angular 1.2.x -->
-<!-- seems the async defer property in a script tag causes the issue. Research why -->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,106 +22,22 @@
    </header>
   <div class="list-group">
     <div class="list-group-item" ng-repeat="product in store.products">
-      <!-- pull out title and price into partial, use ng-include directive, which uses an ajax req to grab the file. note use of single quotes to pass in a string vs. a variable -->
-      <!-- <h3 ng-include="'product-title.html'"></h3> -->
 
-
-      <!-- pull this out to a custom directive. Allows you to write HTML that expresses the behavior of your app. Use dashes in custom directive name -->
-      <!-- don't use self-closing tag for custom tags, not compatible w all browsers -->
-
-      <!-- this is an element directive, use for UI widgets -->
       <product-title></product-title>
 
-      <!-- this is an attribute directive, use for mixin behaviors, like tooltips -->
-      <!-- <h3 product-title></h3> -->
-
-      <!-- pulled into directive
-      <div ng-controller="GalleryController as gallery"  ng-show="product.images.length">
-        <div class="img-wrap">
-          <img ng-src="{{product.images[0].full}}" />
-        </div>
-        <ul class="img-thumbnails clearfix">
-          <li class="small-image pull-left thumbnail" ng-repeat="image in product.images">
-            <img ng-src="{{image}}" />
-          </li>
-        </ul>
-      </div> -->
       <product-gallery></product-gallery>
 
-<!--         pull this out into custom directive
-        <section ng-controller="PanelController as panel">
-          <ul class="nav nav-pills">
-            <li ng-class="{active:panel.isSelected(1)}"><a href="" ng-click="panel.selectPanel(1)">Description</a></li>
-            <li ng-class="{active:panel.isSelected(2)}"><a href="" ng-click="panel.selectPanel(2)">Specifications</a></li>
-            <li ng-class="{active:panel.isSelected(3)}"><a href="" ng-click="panel.selectPanel(3)">Reviews</a></li>
-          </ul>
+      <product-panels></product-panels>
 
-
-          <div ng-show="panel.isSelected(1)">
-            <h4>Description</h4>
-            <p>{{product.description}}</p>
-          </div>
-          <div ng-show="panel.isSelected(2)">
-            <h4>Specifications</h4>
-            <blockquote>None yet</blockquote>
-          </div>
-          <div ng-show="panel.isSelected(3)">
-            <ul class="list-unstyled">
-              <li ng-repeat="review in product.reviews">
-                <blockquote>
-                  <strong>{{review.stars}} Stars</strong>
-                  {{review.body}}
-                  <cite class="clearfix">—{{review.author}} on {{review.createdOn | date}}</cite>
-                </blockquote>
-              </li>
-            </ul>
-
-            <form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewForm.$valid && reviewCtrl.addReview(product)" novalidate>
-
-              <blockquote>
-                <strong>{{reviewCtrl.review.stars}} Stars</strong>
-                {{reviewCtrl.review.body}}
-                <cite class="clearfix">—{{reviewCtrl.review.author}}</cite>
-              </blockquote>
-
-
-              <h4>Submit a Review</h4>
-              <fieldset class="form-group">
-                <select ng-model="reviewCtrl.review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]"  title="Stars" required>
-                  <option value="">Rate the Product</option>
-                </select>
-              </fieldset>
-              <fieldset class="form-group">
-                <textarea ng-model="reviewCtrl.review.body" class="form-control" placeholder="Write a short review of the product..." title="Review" required></textarea>
-              </fieldset>
-              <fieldset class="form-group">
-                <input ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="jimmyDean@example.org" title="Email" required/>
-              </fieldset>
-
-              <div>Review form is {{reviewForm.$valid}}</div>
-              <fieldset class="form-group">
-                <input type="submit" class="btn btn-primary pull-right" value="Submit Review" />
-              </fieldset>
-            </form>
-          </div>
-        </section> -->
-
-        <!-- <product-panels ng-controller="PanelController as panel">
-        </product-panels> -->
-
-        <!-- move controller into directive -->
-        <product-panels></product-panels>
     </div>
   </div>
 
-
   <!-- Latest compiled and minified JavaScript -->
-
-
-    <!-- Latest compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.min.js"></script>
+  <script src="products-list.js" type="text/javascript" charset="utf-8"></script>
+  <script src="products.js" type="text/javascript" charset="utf-8"></script>
   <script src="app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
